# ModelUpdate

./: .gitignore  CMakeLists.txt  DBManager.cpp  DBManager.h  ImpactFunction.cpp  ImpactFunction.h  Sample.cpp  Sample.h  bootstrap.cpp  bootstrap.h  main.cpp  update.cpp  update.h
Bootstrap/: DBManager.cpp  ImpactFunction.h  update.cpp
Client/: Makefile  config.mk  rubis.properties  usersFile.txt
Client/edu/rice/rubis/client/: ClientEmulator.java  RUBiSProperties.java  TransitionTable.java  UserSession.java
New Rules/: cluster.py  graph.py  haproxyConn.py  haproxyStats.py  kmeans.py  kmeansFunction.py  log.py  monitor.py  objects.py  runProxy.py  test.py  test.sh  testProxy.py  util.py
New Rules/KPlane/: ImpactFunction.py  Interval.py  Rule.py  cluster.py  kmeans.py  kplane.py  objects.py
New Rules/Monitor/: haproxyConn.py  log.py  monitor.py
New Rules/Tests/: Accuracy.py  AccuracyAvg.py  Fit.py  Noise.py
New Rules/Visualization/: main.py  test.py
Plotting/: FuzzyClustering.R  Plotter.R  UpdateModel.R
